# dove

./: .gitignore  .gitmodules  Cargo.nix  Cargo.toml  LICENSE  Makefile  README.md  check_project.sh  ci.nix  flake.nix  rustfmt.toml  sonar-project.properties  sonarqube.json  tree_sitter_generate.sh
cli/: Cargo.toml
client/: Cargo.toml
client/src/: dove.rs  env.rs  main.rs
common/dnode-rest-client/: Cargo.toml
common/dnode-rest-client/src/: blocking.rs  ds.rs  lib.rs
crates/analysis/: Cargo.toml
crates/analysis/src/: analysis.rs  change.rs  compiler.rs  config.rs  db.rs  lib.rs
crates/dialects/: Cargo.toml
crates/dialects/lang/: Cargo.toml  build.rs
crates/dialects/shared/: Cargo.toml
crates/dialects/src/: base.rs  changes.rs  dfinance.rs  errors.rs  executor.rs  impls.rs  lib.rs  resources.rs
crates/dialects/tests/: test_executor.rs
crates/integration_tests/: Cargo.toml
crates/integration_tests/src/: lib.rs
crates/integration_tests/tests/: test_compilation_check.rs  test_completion.rs  test_executor.rs  test_lsp.rs
crates/move-executor/: Cargo.toml
crates/move-executor/genesis/: Cargo.toml
crates/move-executor/src/: executor.rs  io.rs  lib.rs  main.rs  serialization.rs
crates/move-executor/tests/: test_executor.rs
crates/move-language-server/: Cargo.toml  build.rs
crates/move-language-server/src/: dispatcher.rs  fs.rs  global_state.rs  handlers.rs  lib.rs  main.rs  main_loop.rs  req.rs  server.rs  subscriptions.rs  world.rs
crates/move-language-server/tests/: test_compilation_check.rs  test_compiler.rs  test_syntax.rs
crates/utils/: Cargo.toml
crates/utils/src/: io.rs  lib.rs  location.rs  tests.rs
dialects/: Cargo.toml
dialects/src/: base.rs  impls.rs  lang.rs  lib.rs
dialects/src/lang/: executor.rs  explain.rs  gas.rs  mod.rs  session.rs
dialects/src/shared/: errors.rs  line_endings.rs
dove/: Cargo.toml  build.rs
dove-lib/: Cargo.toml
dove-lib/src/: lib.rs
dove-lib/src/tx/: fn_call.rs  model.rs  parser.rs
dove/resources/for_tests/: .gitignore  Move.toml
dove/src/: access.rs  cli.rs  colorize.rs  context.rs  executor.rs  home.rs  lib.rs  manifest.rs  metadata.rs  publish.rs  secret_phrase.rs  stdout.rs  tests.rs  tests_helper.rs  transaction.rs  wallet_key.rs
dove/src/call/: cmd.rs  fn_call.rs  mod.rs  parser.rs
dove/src/cmd/: build.rs  call.rs  check.rs  clean.rs  ct.rs  deploy.rs  docgen.rs  execute.rs  export.rs  fetch.rs  init.rs  key.rs  login.rs  metadata.rs  mod.rs  new.rs  prover.rs  publish.rs  run.rs  test.rs  tx.rs  view.rs
dove/src/docs/: mod.rs
dove/src/export/: git_dependency.rs  local_dependency.rs  mod.rs  movetoml.rs
dove/src/index/: interface.rs  meta.rs  mod.rs  store.rs
dove/src/natives/: account.rs  mod.rs  reflect.rs  signature.rs  u256.rs
dove/src/stdout/: colorize.rs  mod.rs  print.rs
dove/src/transaction/: mod.rs  typetag.rs  typevalue.rs
dove/src/tx/: builder.rs  bytecode.rs  cmd.rs  fn_call.rs  mod.rs  model.rs  parser.rs  resolver.rs
dove/src/wallet_key/: encryption.rs  mod.rs  processing.rs
dove/tests/: cmd_dove_clean.rs  cmd_dove_ct_args.rs  cmd_dove_ct_default.rs  cmd_dove_ct_file.rs  cmd_dove_ct_name.rs  cmd_dove_ct_output.rs  cmd_dove_ct_type.rs  cmd_dove_init_default.rs  cmd_dove_init_dfinance.rs  cmd_dove_init_diem.rs  cmd_dove_init_fail.rs  cmd_dove_init_pont.rs  cmd_dove_init_repo.rs  cmd_dove_metadata.rs  cmd_dove_new_default.rs  cmd_dove_new_dfinance.rs  cmd_dove_new_diem.rs  cmd_dove_new_fail.rs  cmd_dove_new_pont.rs  cmd_dove_new_repo.rs  cmd_dove_run_default.rs  cmd_dove_run_with_args.rs  cmd_dove_test_default.rs  cmd_dove_test_fail.rs  cmd_dove_test_one.rs  dove_clean_cmd_success.rs  dove_ct_cmd_success.rs  dove_init_cmd_success.rs  dove_metadata_cmd_success.rs  dove_new_cmd_fail.rs  dove_new_cmd_success.rs  dove_run_cmd_fail.rs  dove_run_cmd_success.rs  dove_test_cmd_fail.rs  dove_test_cmd_success.rs  helper.rs  helpers.rs  test_addresses.rs  test_cmd_dove_build.rs  test_cmd_dove_call.rs  (+13 more)
dovecote/: Cargo.toml  build.rs
dovecote/client/: Cargo.toml  build.sh
dovecote/client/src/: code.rs  context.rs  file.rs  html.rs  lib.rs  project.rs  state.rs
dovecote/client/static/: index.html
dovecote/proto/: Cargo.toml
dovecote/proto/src/: file.rs  lib.rs  project.rs
dovecote/src/: bg.rs  lib.rs  main.rs
dovecote/src/rpc/: m_file.rs  mod.rs  project.rs  projects.rs
dovelight/: Cargo.toml  Makefile  build.sh
dovelight/src/: dependency.rs  interact.rs  lib.rs  loader.rs  storage.rs
dovelight/src/abi/: mod.rs
dovelight/src/api/: js.rs  mod.rs  wasi.rs
dovelight/src/compiler/: dependency.rs  extractor.rs  interact.rs  intern_table.rs  loader.rs  mod.rs  source_map.rs
dovelight/src/env/: mod.rs  wasi_common.rs
dovelight/src/lang/: metadata.rs  mod.rs
dovelight/src/langwasm/: metadata.rs
dovelight/src/move_langwasm/: mod.rs
dovelight/src/storage/: web.rs
dovelight/src/tx/: fn_call.rs  mod.rs  resolver.rs
dovelight/static/: index.html
dovelight/static/css/: main.css
dovelight/static/js/: console.js  editor.js  index.js  lib.js  localapi.js  main.js  project.js  sidebar.js
executor/: Cargo.toml
executor/src/: constants.rs  exec_utils.rs  execution.rs  executor.rs  explain.rs  format.rs  lib.rs  meta.rs  oracles.rs  session.rs
executor/src/metadata/: mod.rs
executor/tests/: test_executor.rs  test_testrunner.rs
lang/: Cargo.toml
lang/compat/: Cargo.toml
lang/decompiler/: Cargo.toml
lang/disassembler/: Cargo.toml
lang/dsl/: Cargo.toml
lang/src/: bech32.rs  builder.rs  checker.rs  compiler.rs  file.rs  lexer.rs  lib.rs  meta_extractor.rs  ss58.rs
lang/tests/: compat.rs
language_server/: Cargo.toml
language_server/src/: global_state.rs  lib.rs  main.rs  main_loop.rs  req.rs  subscriptions.rs  test_utils.rs
language_server/tests/: test_compilation_check.rs  test_lsp.rs
libs/subxt/: Cargo.toml
net/: Cargo.toml
net/src/: lib.rs
resource-viewer/: Cargo.toml  README.md
resource-viewer/src/: lib.rs  main.rs  ser.rs  sp_client.rs  tte.rs
subxt-client/: Cargo.toml  build.rs
subxt-client/src/: lib.rs
(+464 files in other folders)
