[workspace]
members = [
    "language_server",
    "executor",
    "dove",
    "lang",
    "lang/compat",
    "lang/decompiler",
    "resource-viewer",
    "resources",
    "common/git-hash",
    "common/dnode-rest-client",
]

[profile.release]
lto = "thin"
opt-level = 's'
codegen-units = 1
rpath = false
