[workspace]
members = [
    "language_server",
    "net",
    "dove",
    "lang",
    "lang/compat",
    "lang/decompiler",
    "resource-viewer",
    "resources",
    "common/git-hash",
    "dovecote",
    "dovecote/client",
    "dovecote/proto",
]

[profile.release]
lto = "thin"
opt-level = 's'
codegen-units = 1
rpath = false
