[package]
name = "rs-client"
version = "0.1.0"
edition = "2021"


[dependencies]
wasmer = "2.0.0"
wasmer-wasi = "2.0.0"
wasmer-compiler-cranelift = "2.0.0"
wasmer-engine-universal = "2.0.0"
once_cell = "1.4.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
anyhow = "1.0.44"
serde_bytes = "0.11.5"
reqwest = { version = "0.11.6", features = ["blocking"] }