[package]
name = "dove-lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
serde = "1.0.125"
hex = "0.4.2"
bcs = "0.1.3"
move-core-types = { git = "https://github.com/pontem-network/diem.git", branch = "v1.3-r1" }
move-lang = { git = "https://github.com/pontem-network/diem.git", branch = "v1.3-r1" }
diem-types = { git = "https://github.com/pontem-network/diem.git", branch = "v1.3-r1" }
lang = { path = "../lang" }
