[package]
name = "dove"
version = "1.5.0"
authors = [
    "Alex Koz. <alexanderkozlovskii@wings.ai>",
    "Dm. Yakushev <dmitryyakushev@wings.ai>",
    "Maxim Kurnikov <maximkurnikov@wings.ai>",
    "Maxim Vladimirov <maxim@pontem.network>"
]
edition = "2021"
build = "build.rs"

[dependencies]
# LOCAL
git-hash = { path = "../common/git-hash" }

# DIEM
move-core-types = { git = "https://github.com/pontem-network/diem.git", branch = "v1.5-pre" }
move-symbol-pool = { git = "https://github.com/pontem-network/diem.git", branch = "v1.5-pre" }
move-cli = { git = "https://github.com/pontem-network/diem.git", branch = "v1.5-pre" }
move-package = { git = "https://github.com/pontem-network/diem.git", branch = "v1.5-pre" }
move-stdlib = { git = "https://github.com/pontem-network/diem.git", branch = "v1.5-pre" }
dialect = { git = "https://github.com/pontem-network/diem.git", branch = "v1.5-pre" }
boogie-backend = { git = "https://github.com/pontem-network/diem.git", branch = "v1.5-pre" }

# third-party dependencies
log = "0.4.14"
anyhow = "1.0.45"
structopt = "0.3.25"
serde = { version = "1.0.130", features = ["derive"] }
once_cell = "1.8.0"
termcolor = "1.1.2"
atty = "0.2.14"
bcs = "0.1.3"
reqwest = { version = "0.10.4", features = ["blocking", "json"] }

rand = "=0.7.3"
twox-hash = "1.5.0"
toml = "0.5"
hex = "0.4.2"
semver = "1.0.3"
lazy_static = "1.4.0"
regex = "1.4.3"

#http = "0.2"
#tiny-keccak = { version = "2.0.2", default-features = false, features = ["sha3"] }
#lang = { path = "../lang" }

#bech32 = "0.7.2"
#once_cell = "1.4.0"
#walkdir = "2.3.1"
#fs_extra = "1.2.0"

#itertools = "0.9.0"
#maplit = "1.0.2"
#serde_json = "1.0.52"
#git2 = "0.13"
#bcs = "0.1.2"
#dunce = "1.0.1"
#indexmap = { version = "=1.6.2", default-features = false, features = ["std"] }
#codespan-reporting = "0.8.0"

#decompiler = { path = "../lang/decompiler" }
#net = { path = "../net" }

#move-cli = { git = "https://github.com/pontem-network/diem.git", branch = "v1.5-pre" }
#move-core-types = { git = "https://github.com/pontem-network/diem.git", branch = "v1.3-r1" }
#move-lang = { git = "https://github.com/pontem-network/diem.git", branch = "v1.3-r1" }
#docgen = { git = "https://github.com/pontem-network/diem.git", branch = "v1.3-r1" }
#move-model = { git = "https://github.com/pontem-network/diem.git", branch = "v1.3-r1" }


#move-unit-test = { git = "https://github.com/pontem-network/diem.git", branch = "v1.3-r1" }
#move-vm-runtime = { git = "https://github.com/pontem-network/diem.git", branch = "v1.3-r1" }
#move-vm-types = { git = "https://github.com/pontem-network/diem.git", branch = "v1.3-r1" }
#diem-types = { git = "https://github.com/pontem-network/diem.git", branch = "v1.3-r1" }
#move-binary-format = { git = "https://github.com/pontem-network/diem.git", branch = "v1.3-r1" }
#diem-crypto-derive = { git = "https://github.com/pontem-network/diem.git", branch = "v1.5-pre" }
#diem-crypto = { git = "https://github.com/pontem-network/diem.git", branch = "v1.5-pre" }

## move-prover deps
#move-prover = { git = "https://github.com/pontem-network/diem.git", branch = "v1.3-r1" }

[features]
default = []

[build-dependencies]
git2 = "0.13"
fs_extra = "1.2.0"
anyhow = "1.0.42"
