[package]
name = "dove"
version = "1.5.6"
authors = [
    "Alex Koz. <alexanderkozlovskii@wings.ai>",
    "Dm. Yakushev <dmitryyakushev@wings.ai>",
    "Maxim Kurnikov <maximkurnikov@wings.ai>",
    "Maxim Vladimirov <maxim@pontem.network>"
]
edition = "2021"

[dependencies]
# LOCAL
git-hash = { path = "../common/git-hash" }
lang = { path = "../lang" }
move-resource-viewer = { path = "../resource-viewer" }
net = { path = "../net" }
pontem-client = { path = "../pontem/client" }

# DIEM
move-core-types = { git = "https://github.com/pontem-network/diem.git", branch = "v1.5.1-pre" }
move-compiler = { git = "https://github.com/pontem-network/diem.git", branch = "v1.5.1-pre" }
move-symbol-pool = { git = "https://github.com/pontem-network/diem.git", branch = "v1.5.1-pre" }
move-cli = { git = "https://github.com/pontem-network/diem.git", branch = "v1.5.1-pre" }
move-package = { git = "https://github.com/pontem-network/diem.git", branch = "v1.5.1-pre" }
move-stdlib = { git = "https://github.com/pontem-network/diem.git", branch = "v1.5.1-pre" }
dialect = { git = "https://github.com/pontem-network/diem.git", branch = "v1.5.1-pre" }
boogie-backend = { git = "https://github.com/pontem-network/diem.git", package = "move-prover-boogie-backend", branch = "v1.5.1-pre" }
diem-types = { git = "https://github.com/pontem-network/diem.git", branch = "v1.5.1-pre" }
move-binary-format = { git = "https://github.com/pontem-network/diem.git", branch = "v1.5.1-pre" }
move-prover = { git = "https://github.com/pontem-network/diem.git", branch = "v1.5.1-pre" }
move-vm-runtime = { git = "https://github.com/pontem-network/diem.git", branch = "v1.5.1-pre" }
bytecode-source-map = { git = "https://github.com/pontem-network/diem.git", package = "move-bytecode-source-map", branch = "v1.5.1-pre" }
move-command-line-common = { git = "https://github.com/pontem-network/diem.git", branch = "v1.5.1-pre" }
diem-vm = { git = "https://github.com/pontem-network/diem.git", branch = "v1.5.1-pre" }

# third-party dependencies
log = "0.4.14"
anyhow = "1.0.45"
structopt = "0.3.25"
serde = { version = "1.0.130", features = ["derive"] }
once_cell = "1.8.0"
termcolor = "1.1.2"
atty = "0.2.14"
bcs = "0.1.3"
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
codespan-reporting = "0.11.1"
rand = "=0.7.3"
twox-hash = "1.5.0"
toml = "0.5"
hex = "0.4.2"
semver = "1.0.3"
lazy_static = "1.4.0"
regex = ">=1.4.3, <=1.5.4"
itertools = "0.9.0"
http = "0.2"
serde_json = "1.0"
# handle urls to communicate with substrate nodes
url = { version = "2.2.2", features = ["serde"] }

[features]
default = []
