[package]
name = "dove"
version = "1.7.1"
authors = [
    "Alex Koz. <alexanderkozlovskii@wings.ai>",
    "Dm. Yakushev <dmitryyakushev@wings.ai>",
    "Maxim Kurnikov <maximkurnikov@wings.ai>",
    "Maxim Vladimirov <maxim@pontem.network>"
]
edition = "2021"

[dependencies]
# LOCAL
git-hash = { path = "../common/git-hash" }
resource-viewer = { path = "../resource-viewer" }
lang = { path = "../lang" }
net = { path = "../net" }
pontem-client = { path = "../pontem/client" }

# DIEM
move-core-types = { git = "https://github.com/pontem-network/move.git", branch = "release-1.7.1" }
move-compiler = { git = "https://github.com/pontem-network/move.git", branch = "release-1.7.1" }
move-stdlib = { git = "https://github.com/pontem-network/move.git", branch = "release-1.7.1" }
move-binary-format = { git = "https://github.com/pontem-network/move.git", branch = "release-1.7.1" }
move-bytecode-source-map = { git = "https://github.com/pontem-network/move.git", branch = "release-1.7.1" }
move-vm-runtime = { git = "https://github.com/pontem-network/move.git", branch = "release-1.7.1" }
move-vm-types = { git = "https://github.com/pontem-network/move.git", branch = "release-1.7.1" }
move-symbol-pool = { git = "https://github.com/pontem-network/move.git", branch = "release-1.7.1" }
move-package = { git = "https://github.com/pontem-network/move.git", branch = "release-1.7.1" }
move-command-line-common = { git = "https://github.com/pontem-network/move.git", branch = "release-1.7.1" }
move-cli = { git = "https://github.com/pontem-network/move.git", branch = "release-1.7.1" }
pontem = { git = "https://github.com/pontem-network/move.git", branch = "release-1.7.1" }
move-resource-viewer = { package = "move-resource-viewer", git = "https://github.com/pontem-network/move.git", branch = "release-1.7.1" }

# third-party dependencies
log = "0.4.14"
env_logger = "0.9"
anyhow = "1.0.45"
clap = { version = "3.1.6", features = ["derive"] }
serde = { version = "1.0.130", features = ["derive"] }
once_cell = "1.8.0"
atty = "0.2.14"
bcs = "0.1.3"
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
codespan-reporting = "0.11.1"
rand = "=0.7.3"
twox-hash = "1.5.0"
toml = "0.5"
hex = "0.4.2"
semver = "1.0.3"
lazy_static = "1.4.0"
regex = "^1.5.5"
itertools = "0.9.0"
uint = "0.9.1"
smallvec = "1.8.0"
diem-crypto = "0.0.3"
serde_json = "1.0"
fs_extra = "1.2.0"
logs = ">=0.4"

# Used for storing access keys
aes = "0.7"
block-modes = "0.8"
ring = "0.16"
rpassword = "5.0"
# Used to wait for key generation
lockfile = "0.3"

# node address
url = { version = "2.2.2", features = ["serde"] }

[features]
default = []
