[package]
name = "dovecote"
version = "0.1.0"
edition = "2018"

[dependencies]
actix = "0.10"
actix-codec = "0.3"
actix-web = "3"
async-std = "1.10.0"
actix-web-actors = "3"
actix-files = "0.3"
awc = "2"
env_logger = "0.8"
futures = "0.3.1"
bytes = "0.5.3"
anyhow = "1.0.43"
proto = { path = "proto" }
once_cell = "1.8.0"
dove = { path = "../dove" }
parking_lot = "0.11.2"
log = "0.4.14"
chrono = "0.4.19"
hex = "0.4.2"
xi-rope = { git = "https://github.com/google/xi-editor", tag = "xi-unicode-v0.2.1" }
regex = "1.4.3"