[package]
name = "dovelight"
version = "0.1.0"
edition = "2018"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.44"
wasm-bindgen = "0.2.74"
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3.55", features = ["Storage", "XmlHttpRequest"] }
bcs = "0.1.3"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
hex = "0.4.2"
regex = "1.4.3"
move-lang = { git = "https://github.com/pontem-network/diem.git", branch = "v1.3-r1" }
move-binary-format = { git = "https://github.com/pontem-network/diem.git", branch = "v1.3-r1" }
move-core-types = { git = "https://github.com/pontem-network/diem.git", branch = "v1.3-r1" }
lang = { path = "../lang" }
dove-lib = { path = "../dove-lib" }
