[package]
name = "dovelight"
version = "0.1.0"
edition = "2018"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.44"
bcs = "0.1.3"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_bytes = "0.11.5"
hex = "0.4.2"
regex = "1.4.3"
itertools = "0.9.0"
bytes = "1"

move-lang = { git = "https://github.com/pontem-network/diem.git", branch = "v1.3-r1" }
move-binary-format = { git = "https://github.com/pontem-network/diem.git", branch = "v1.3-r1" }
move-core-types = { git = "https://github.com/pontem-network/diem.git", branch = "v1.3-r1" }
move-ir-types = { git = "https://github.com/pontem-network/diem.git", branch = "v1.3-r1" }
lang = { path = "../lang" }

[target.'cfg(all(target_arch = "wasm32", target_os = "wasi"))'.dependencies]
http = { version = "0.2.5", optional = true }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
wasm-bindgen = { version = "0.2.74" }
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3.55", features = ["Storage", "XmlHttpRequest"], optional = true }

[features]
internal_rt = ["web-sys", "http"]
external_rt = []