[package]
name = "move-executor"
version = "0.1.0"
authors = ["Maksim Kurnikov <maxim.kurnikov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.28"
serde = "1.0.125"
serde_json = "1.0.52"
clap = "2.33.1"
textwrap = "0.12.1"
num-format = { version = "0.4", features = ["std"] }
enum-iterator = "0.6.0"

resources = { path = "../resources" }
lang = { path = "../lang" }
git-hash = { path = "../common/git-hash" }
