[package]
name = "move-executor"
version = "0.1.1"
authors = ["Maksim Kurnikov <maxim.kurnikov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.28"
serde = "1.0.125"
serde_json = "1.0.52"
clap = "2.33.1"
textwrap = "0.12.1"
num-format = { version = "0.4", features = ["std"] }
enum-iterator = "0.6.0"

resources = { path = "../resources" }
lang = { path = "../lang" }
git-hash = { path = "../common/git-hash" }

diem-types = { git = "https://github.com/pontem-network/diem.git", branch = "release-1.2.0-v1" }
move-lang = { git = "https://github.com/pontem-network/diem.git", branch = "release-1.2.0-v1" }
move-core-types = { git = "https://github.com/pontem-network/diem.git", branch = "release-1.2.0-v1" }
move-vm-types = { git = "https://github.com/pontem-network/diem.git", branch = "release-1.2.0-v1" }
move-ir-types = { git = "https://github.com/pontem-network/diem.git", branch = "release-1.2.0-v1" }
vm = { git = "https://github.com/pontem-network/diem.git", branch = "release-1.2.0-v1" }
move-vm-runtime = { git = "https://github.com/pontem-network/diem.git", branch = "release-1.2.0-v1", features = ["debug_module"] }
resource-viewer = { git = "https://github.com/pontem-network/diem.git", branch = "release-1.2.0-v1" }
bcs = "0.1.2"
