[package]
name = "lang"
version = "0.1.0"
authors = [
    "Alex Koz. <alexanderkozlovskii@wings.ai>",
    "Dm. Yakushev <dmitryyakushev@wings.ai>",
    "Maxim Kurnikov <maximkurnikov@wings.ai>",
    "Maxim Vladimirov <maxim@pontem.network>"
]
edition = "2018"
publish = false

[dependencies]
# LOCAL
compat = { path = "compat", package = "move-compat" }

# DIEM
move-core-types = { git = "https://github.com/pontem-network/diem.git", branch = "v1.5-pre" }
move-lang = { git = "https://github.com/pontem-network/diem.git", branch = "v1.5-pre" }
move-symbol-pool = { git = "https://github.com/pontem-network/diem.git", branch = "v1.5-pre" }
move-ir-types = { git = "https://github.com/pontem-network/diem.git", branch = "v1.5-pre" }
move-binary-format = { git = "https://github.com/pontem-network/diem.git", branch = "v1.5-pre" }

# third-party dependencies
anyhow = "1.0.45"
serde = { version = "1.0.130", features = ["derive"] }
codespan-reporting = "0.11.1"
walkdir = "2.3.1"
rust-base58 = "0.0.4"
# ss58 prefix
blake2-rfc = "0.2.18"

#move-lang = { git = "https://github.com/pontem-network/diem.git", branch = "v1.3-r1" }
#move-core-types = { git = "https://github.com/pontem-network/diem.git", branch = "v1.3-r1" }
#move-binary-format = { git = "https://github.com/pontem-network/diem.git", branch = "v1.3-r1" }
#move-vm-types = { git = "https://github.com/pontem-network/diem.git", branch = "v1.3-r1" }
#move-ir-types = { git = "https://github.com/pontem-network/diem.git", branch = "v1.3-r1" }
#ir-to-bytecode-syntax = { git = "https://github.com/pontem-network/diem.git", branch = "v1.3-r1" }
#compat = { path = "compat", package = "move-compat" }
#move-model = { git = "https://github.com/pontem-network/diem.git", branch = "v1.3-r1" }
#
#serde = "1.0.125"
#serde_derive = "1.0.125"
#serde_json = "1.0.52"
#log = "0.4"
#env_logger = "0.7.1"
#anyhow = "1.0.28"
#rand = "=0.7.3"
#hex = "0.4.2"
#itertools = "0.9.0"
#walkdir = "2.3.1"
#once_cell = "1.7.2"
#
#lsp-types = "0.89.0"
#codespan = "0.8.0"
#codespan-reporting = "0.8.0"
#codespan9 = { package = "codespan", version = "0.9.2" }
#codespan-reporting9 = { package = "codespan-reporting", version = "0.9.2" }
#
#
## bech32 support
#regex = "1.4.3"
#lazy_static = "1.4.0"
#bech32 = "0.7.2"
#

# @todo remove?
[dev-dependencies]
include_dir = "0.6.0"
tempfile = "3.2.0"