[package]
name = "lang"
version = "0.1.0"
authors = [
    "Alex Koz. <alexanderkozlovskii@wings.ai>",
    "Dm. Yakushev <dmitryyakushev@wings.ai>",
    "Maxim Kurnikov <maximkurnikov@wings.ai>",
    "Maxim Vladimirov <maxim@pontem.network>"
]
edition = "2018"
publish = false

[dependencies]
# DIEM
move-core-types = { git = "https://github.com/pontem-network/diem.git", branch = "v1.5.1-pre" }
move-compiler = { git = "https://github.com/pontem-network/diem.git", branch = "v1.5.1-pre" }
move-symbol-pool = { git = "https://github.com/pontem-network/diem.git", branch = "v1.5.1-pre" }
move-ir-types = { git = "https://github.com/pontem-network/diem.git", branch = "v1.5.1-pre" }
move-binary-format = { git = "https://github.com/pontem-network/diem.git", branch = "v1.5.1-pre" }
move-command-line-common = { git = "https://github.com/pontem-network/diem.git", branch = "v1.5.1-pre" }
move-package = { git = "https://github.com/pontem-network/diem.git", branch = "v1.5.1-pre" }

# third-party dependencies
anyhow = "1.0.45"
serde = { version = "1.0.130", features = ["derive"] }
codespan-reporting = "0.11.1"
walkdir = "2.3.1"

[dev-dependencies]
include_dir = "0.6.0"
tempfile = "3.2.0"