[package]
name = "lang"
version = "0.1.1"
authors = [
    "Alex Koz. <alexanderkozlovskii@wings.ai>",
    "Dm. Yakushev <dmitryyakushev@wings.ai>",
    "Maxim Kurnikov <maximkurnikov@wings.ai>",
    "Maxim Vladimirov <maxim@pontem.network>"
]
edition = "2018"
publish = false

[dependencies]
# DIEM
move-core-types = { git = "https://github.com/pontem-network/move.git", branch = "release-1.7.1" }
move-compiler = { git = "https://github.com/pontem-network/move.git", branch = "release-1.7.1" }
move-symbol-pool = { git = "https://github.com/pontem-network/move.git", branch = "release-1.7.1" }
move-ir-types = { git = "https://github.com/pontem-network/move.git", branch = "release-1.7.1" }
move-binary-format = { git = "https://github.com/pontem-network/move.git", branch = "release-1.7.1" }
move-command-line-common = { git = "https://github.com/pontem-network/move.git", branch = "release-1.7.1" }
move-package = { git = "https://github.com/pontem-network/move.git", branch = "release-1.7.1" }

# third-party dependencies
anyhow = "1.0.45"
serde = { version = "1.0.130", features = ["derive"] }
codespan-reporting = "0.11.1"
walkdir = "2.3.1"
rust-base58 = "0.0.4"
blake2-rfc = "0.2"

[dev-dependencies]
include_dir = "0.6.0"
tempfile = "3.2.0"
