[package]
name = "move-language-server"
version = "0.4.0"
authors = ["Maxim Kurnikov <maxim.kurnikov@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.8"
env_logger = "0.7.1"

anyhow = "1.0.31"
lsp-types = "0.89.0"
lsp-server = "0.5.0"

serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.48"
threadpool = "1.8.1"
crossbeam-channel = "0.5.1"
walkdir = "2.3.1"
codespan = "0.8.0"
codespan-reporting = "0.8.0"
codespan9 = { package = "codespan", version = "0.9.2" }
codespan-reporting9 = { package = "codespan-reporting", version = "0.9.2" }
hex = "0.4.2"
resources = { path = "../resources" }
lang = { path = "../lang" }
