[package]
name = "net"
version = "0.1.1"
edition = "2018"

[dependencies]
anyhow = { version = "1.0", default-features = false }
http = "0.2"
serde = { version = "1.0.125", features = ["derive", "rc"] }
serde_json = "1.0"
log = "0.4"
hex = "0.4"
reqwest = { version = "0.10", features = ["blocking", "json"] }
bcs = "0.1.2"

lang = { path = "../lang" }

move-core-types = { git = "https://github.com/pontem-network/diem.git", branch = "v1.3-r1" }
move-vm-runtime = { git = "https://github.com/pontem-network/diem.git", branch = "v1.3-r1", features = ["debug_module"] }
move-binary-format = { git = "https://github.com/pontem-network/diem.git", branch = "v1.3-r1" }

