[package]
name = "net"
version = "0.1.2"
edition = "2018"

[dependencies]
# LOCAL
lang = { path = "../lang" }
move-compat = { path = "../lang/compat" }

# DIEM
dialect = { git = "https://github.com/pontem-network/diem.git", branch = "v1.5.1-pre" }
move-core-types = { git = "https://github.com/pontem-network/diem.git", branch = "v1.5.1-pre" }
move-vm-runtime = { git = "https://github.com/pontem-network/diem.git", branch = "v1.5.1-pre" }
move-binary-format = { git = "https://github.com/pontem-network/diem.git", branch = "v1.5.1-pre" }
anyhow = { version = "1.0", default-features = false }

# third-party dependencies
serde = { version = "1.0.125", features = ["derive", "rc"] }
serde_json = "1.0"
http = "0.2"
reqwest = { version = "0.10", features = ["blocking", "json"] }
log = "0.4"
hex = "0.4.2"
bcs = "0.1.3"


