[package]
name = "net"
version = "0.1.2"
edition = "2018"

[dependencies]
# LOCAL
lang = { path = "../lang" }

# DIEM
move-core-types = { git = "https://github.com/pontem-network/move.git", branch = "release-1.7.1" }
move-vm-runtime = { git = "https://github.com/pontem-network/move.git", branch = "release-1.7.1" }
move-binary-format = { git = "https://github.com/pontem-network/move.git", branch = "release-1.7.1" }

# third-party dependencies
anyhow = { version = "1.0", default-features = false }
serde = { version = "1.0.125", features = ["derive", "rc"] }
serde_json = "1.0"
url = { version = "2.2" }
reqwest = { version = "0.10", features = ["blocking", "json"] }
log = "0.4"
hex = "0.4.2"
bcs = "0.1.3"

[features]
dfinance = []

