[package]
name = "move-resource-viewer"
version = "1.2.0"
authors = ["Alex Koz. <a@koz.email>"]
edition = "2018"

[dependencies]
log = "0.4"
anyhow = { version = "1.0", default-features = false }
http = "0.2"
serde = { version = "1.0.125", features = ["derive", "rc"] }
serde_json = "1.0"
schemars = { version = "0.8", features = ["default", "derive", "preserve_order"], optional = true }
hex = "0.4.2"

# diem deps:
move-core-types = { git = "https://github.com/pontem-network/diem.git", branch = "v1.3-r1" }
resource-viewer = { git = "https://github.com/pontem-network/diem.git", branch = "v1.3-r1" }
move-ir-types = { git = "https://github.com/pontem-network/diem.git", branch = "v1.3-r1" }
move-lang = { git = "https://github.com/pontem-network/diem.git", branch = "v1.3-r1" }
move-binary-format = { git = "https://github.com/pontem-network/diem.git", branch = "v1.3-r1" }
move-vm-runtime = { git = "https://github.com/pontem-network/diem.git", branch = "v1.3-r1", features = ["debug_module"]}

# move-lang deps:
lang = { path = "../lang" }
git-hash = { path = "../common/git-hash" }
compat = { path = "../lang/compat", package = "move-compat" }
net = { path = "../net" }

# cli:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow = { version = "1.0", default-features = true }
structopt = "0.3"
env_logger = "0.8.2"

[features]
default = [
    "json-schema",
]

json-schema = ["schemars"]
