[package]
name = "dnode-rest-client"
version = "0.1.0"
authors = ["Alex Koz. <a@koz.email>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
http = "0.2"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "=1.0.118", features = ["derive", "rc"] }
serde_json = "1.0"
hex = "0.4"

# move-lang deps:
libra = { package = "dfibra", git = "https://github.com/dfinance/libra.git", branch = "release-1.0" }


anyhow = { version = "1.0", default-features = false }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow = { version = "1.0", default-features = true }
