[package]
name = "analysis"
version = "0.1.0"
authors = ["Maksim Kurnikov <maxim.kurnikov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.7.1"

anyhow = "1.0.27"
lsp-types = {version = "0.74.0", features = ["proposed"]}

serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
crossbeam-channel = "0.4.2"
codespan = "0.8.0"
codespan-reporting = "0.8.0"
codespan9 = { package = "codespan", version = "0.9.2" }
codespan-reporting9 = { package = "codespan-reporting", version = "0.9.2" }
hex = "0.4.2"

shared = { path = "../dialects/shared" }
dialects = { path = "../dialects" }
utils = { path = "../utils" }