[package]
name = "dialects"
version = "0.1.0"
authors = ["Maksim Kurnikov <maxim.kurnikov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.28"
serde = "1.0.106"
serde_derive = "1.0.106"
serde_json = "1.0.52"
codespan = "0.8.0"

# bech32 support
hex = "0.4.2"
regex = "1.3.7"
lazy_static = "1.4.0"
bech32 = "0.7.2"

utils = { path = "../utils" }

move-vm-runtime = { git = "https://github.com/dfinance/libra.git", branch = "09.07.2020" }
move-vm-types = { git = "https://github.com/dfinance/libra.git", branch = "09.07.2020" }
libra-state-view = { git = "https://github.com/dfinance/libra.git", branch = "09.07.2020" }
language-e2e-tests = { git = "https://github.com/dfinance/libra.git", branch = "09.07.2020" }
move-core-types = { git = "https://github.com/dfinance/libra.git", branch = "09.07.2020" }
vm = { git = "https://github.com/dfinance/libra.git", branch = "09.07.2020" }
libra-types = { git = "https://github.com/dfinance/libra.git", branch = "09.07.2020" }
move-lang = { git = "https://github.com/dfinance/libra.git", branch = "09.07.2020" }
libra-canonical-serialization = { git = "https://github.com/dfinance/libra.git", branch = "09.07.2020" }
libra-crypto = { git = "https://github.com/dfinance/libra.git", branch = "09.07.2020" }
move-ir-types = { git = "https://github.com/dfinance/libra.git", branch = "09.07.2020" }
vm-genesis = { git = "https://github.com/dfinance/libra.git", branch = "09.07.2020" }

#move-vm-runtime = { path = "../../../dvm-libra/language/move-vm/runtime" }
#move-vm-types = { path = "../../../dvm-libra/language/move-vm/types" }
#libra-state-view = { path = "../../../dvm-libra/storage/state-view" }
#language-e2e-tests = { path = "../../../dvm-libra/language/e2e-tests" }
#move-core-types = { path = "../../../dvm-libra/language/move-core/types" }
#vm = { path = "../../../dvm-libra/language/vm" }
#libra-types = { path = "../../../dvm-libra/types" }
#move-lang = { path = "../../../dvm-libra/language/move-lang" }
#libra-canonical-serialization = { path = "../../../dvm-libra/common/lcs" }
#libra-crypto = { path = "../../../dvm-libra/crypto/crypto" }
#move-ir-types = { path = "../../../dvm-libra/language/move-ir/types" }
#vm-genesis = { path = "../../../dvm-libra/language/tools/vm-genesis" }

libra-move-core-types = { package = "move-core-types", git = "https://github.com/dfinance/libra.git", branch = "master" }
